# news_scraper

./: .gitignore  Cargo.toml  readme.md
src/: main.rs  prepare_dataset.rs  preprocess.rs  scrape_data.rs  tf_idf.rs
