[package]
name = "topic_modelling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
nlprule = "0.6.4"
plotters = "0.3.4"
rand = "0.8.5"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking"] }
scraper = "0.15.0"
tokenizers = "0.13.2"
